favicon added and error messages fixed to be visible

--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -75,3 +75,11 @@ label {
     align-items: center;
     margin: auto;
 }
+
+.errors li {
+    display: flex;
+    color: red;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+}
